# proglab6

./: CMakeLists.txt  circle.cpp  circle.hpp  controller.cpp  controller.hpp  document.cpp  document.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp  userView.cpp  userView.hpp  version.h.in
.github/workflows/: release.yml
